package entrega3;

public class CancelarCommand implements Command{
    @Override
    public void execute() {
        System.out.println("Cancelacion realizada ");
    }
}
