package entrega3;

public interface Command {
    void execute();
}
