package entrega3;

public interface EstadoMesa {
    void manejar(Mesa mesa);
}
