package entrega3;

public class OrdenarCommand implements Command{

    @Override
    public void execute() {
        System.out.println("Orden realizada ");
    }
}
