package entrega3;

public class ReservarCommand implements Command{

    @Override
    public void execute() {
        System.out.println("Reserva realizada ");
    }
}
